add empty links

--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
         <section id="es-categories-main" class="es-grid-container es_margin">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
-                <figcaption class="es-figcaption-red">Novidades</figcaption>
+                <a href="#" target="_blank">
+                    <figcaption class="es-figcaption-red">Novidades</figcaption>
+                </a>
             </figure>
             <figure class="es-grid-item">
                 <img src="./assets/img/02-mais.png">
-                <figcaption class="es-figcaption-red">Os mais vendidos</figcaption>
+                <a href="#" target="_blank">
+                    <figcaption class="es-figcaption-red">Os mais vendidos</figcaption>
+                </a>
             </figure>
             <figure class="es-grid-item">
                 <img src="./assets/img/03-dificeis.png">
-                <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
+                <a href="#" target="_blank">
+                    <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
+                </a>
             </figure>
             <figure class="es-grid-item es_centered">
-                <h2>Compre todos os sets da lego</h2>
+                <h2><a href="#" target="_blank">Compre todos os sets da lego</a></h2>
             </figure>
         </section>
 
@@ -38,46 +44,58 @@
 
         <section id="es-categories-age" class="es-grid-container  es_margin">
             <figure class="es-grid-first es-flex-container-col">
-                <img src="./assets/img/1+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>1 &frac12;+</h3>
-                    <img src="assets/img/1+ icon.png">
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/1+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>1 &frac12;+</h3>
+                        <img src="assets/img/1+ icon.png">
+                    </figcaption>
+                </a>
             </figure>
             <figure class="es-flex-container-col">
-                <img src="./assets/img/4+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>4+</h3>
-                    <div><img src="assets/img/4+ icon.png"></div>
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/4+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>4+</h3>
+                        <div><img src="assets/img/4+ icon.png"></div>
+                    </figcaption>
+                </a>
             </figure>
             <figure class="es-flex-container-col">
-                <img src="./assets/img/6+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>6+</h3>
-                    <div><img src="assets/img/6+ icon.png"></div>
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/6+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>6+</h3>
+                        <div><img src="assets/img/6+ icon.png"></div>
+                    </figcaption>
+                </a>
             </figure>
             <figure class="es-flex-container-col">
-                <img src="./assets/img/9+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>9+</h3>
-                    <div><img src="assets/img/9+ icon.png"></div>
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/9+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>9+</h3>
+                        <div><img src="assets/img/9+ icon.png"></div>
+                    </figcaption>
+                </a>
             </figure>
             <figure class="es-flex-container-col">
-                <img src="./assets/img/13+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>13+</h3>
-                    <div><img src="assets/img/13+ icon.png"></div>
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/13+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>13+</h3>
+                        <div><img src="assets/img/13+ icon.png"></div>
+                    </figcaption>
+                </a>
             </figure>
             <figure class="es-grid-first es-grid-last es-flex-container-col">
-                <img src="./assets/img/18+ kid.png">
-                <figcaption class="es-flex-container-row">
-                    <h3>Adultos</h3>
-                    <div><img src="assets/img/18+ icon.png"></div>
-                </figcaption>
+                <a href="#" target="_blank">
+                    <img src="./assets/img/18+ kid.png">
+                    <figcaption class="es-flex-container-row">
+                        <h3>Adultos</h3>
+                        <div><img src="assets/img/18+ icon.png"></div>
+                    </figcaption>
+                </a>
             </figure>
         </section>
 
@@ -86,10 +104,14 @@
         <section id="es-categories-theme" class="es-grid-container  es_margin">
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/city-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/city-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/city-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/city-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/city-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -99,10 +121,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/friends-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/friends-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/friends-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/friends-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/friends-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -112,10 +138,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/ninjago-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/ninjago-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/ninjago-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/ninjago-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/ninjago-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -125,10 +155,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/duplo-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/duplo-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/duplo-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/duplo-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -138,10 +172,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/technic-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/technic-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/technic-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/technic-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/technic-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -151,10 +189,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/starwars-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/starwars-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/starwars-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/starwars-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/starwars-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -164,12 +206,12 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/mario-logo.png" id="es-mario-logo">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/mario-logo.png" id="es-mario-logo">
+                    </a>
                 </div>
-
                 <img class="es-grid-container-card-body" src="./assets/img/mario-pic.png">
                 <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
@@ -178,10 +220,14 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/potter-logo.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/potter-logo.png">
+                    </a>
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/potter-icon.png">
+                    <a href="#" target="_blank">
+                        <img src="./assets/img/potter-icon.png">
+                    </a>
                 </div>
                 <img class="es-grid-container-card-body" src="./assets/img/potter-pic.png">
                 <figcaption class="es-grid-container-card-footer">
@@ -193,26 +239,36 @@
         <section class="es-divider div-03"></section>
 
         <section id="es-categories-other" class="es-grid-container  es_margin">
+
             <figure class="es-grid-container-card-3x3">
-                <img src="./assets/img/animals-fg.png">
+                <a href="#" target="_blank">
+                    <img src="./assets/img/animals-fg.png">
+                </a>
                 <figcaption>
                     <h3>Animals</h3>
                 </figcaption>
+
             </figure>
             <figure class="es-grid-container-card-3x3">
-                <img src="./assets/img/vehicles-fg.png">
+                <a href="#" target="_blank">
+                    <img src="./assets/img/vehicles-fg.png">
+                </a>
                 <figcaption>
                     <h3>Veículos</h3>
                 </figcaption>
             </figure>
             <figure class="es-grid-container-card-3x3">
-                <img src="./assets/img/gaming-fg.png">
+                <a href="#" target="_blank">
+                    <img src="./assets/img/gaming-fg.png">
+                </a>
                 <figcaption>
                     <h3>Gaming</h3>
                 </figcaption>
             </figure>
             <figure class="es-grid-container-card-3x3">
-                <img src="./assets/img/heroes-fg.png">
+                <a href="#" target="_blank">
+                    <img src="./assets/img/heroes-fg.png">
+                </a>
                 <figcaption>
                     <h3>Aventuras e Heróis</h3>
                 </figcaption>
@@ -220,30 +276,65 @@
         </section>
         <footer id="es-footer" class="margin">
             <div class="es_centered">
-              <h3>Todos os temas e categorias</h3>
-            <ul>
-                <li>City</li>
-                <li>Friends</li>
-                <li>Technic</li>
-                <li>Ninjago &#174;</li>
-                <li>Classic</li>
-                <li>DUPLO &#174;</li>
-                <li>Speed Champions</li>
-                <li>Avatar</li>
-                <li>Harry Potter</li>
-                <li>Marvel</li>
-                <li>Star Wars &#8482;</li>
-                <li>Minecraft</li>
-                <li>DC Superheroes</li>
-                <li>Disney</li>
-                <li>Jurassic World</li>
-                <li>Super Mario</li>
-                
-                <li>Adults welcome:</li>
-                <li>Art, Icons, Ideas</li>
-            </ul>  
+                <h3>Todos os temas e categorias</h3>
+                <ul>
+                    <a href="#" target="_blank">
+                        <li>City</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Friends</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Technic</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Ninjago &#174;</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Classic</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>DUPLO &#174;</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Speed Champions</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Avatar</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Harry Potter</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Marvel</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Star Wars &#8482;</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Minecraft</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>DC Superheroes</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Disney</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Jurassic World</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Super Mario</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Adults welcome:</li>
+                    </a>
+                    <a href="#" target="_blank">
+                        <li>Art, Icons, Ideas</li>
+                    </a>
+                </ul>
             </div>
-            
+
         </footer>
     </main>
 </body>
