add div to one figure img for consistency

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img src="./assets/img/1+ kid.png">
                     <figcaption class="es-flex-container-row">
                         <h3>1 &frac12;+</h3>
-                        <img src="assets/img/1+ icon.png">
+                        <div><img src="assets/img/1+ icon.png"></div>
                     </figcaption>
                 </a>
             </figure>
