add margins to divider

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </figure>
         </section>
 
-        <section class="es-divider div-01"></section>
+        <section class="es-divider div-01 es_margin"></section>
 
         <section id="es-categories-age" class="es-grid-container  es_margin">
             <figure class="es-grid-first es-flex-container-col">
@@ -99,7 +99,7 @@
             </figure>
         </section>
 
-        <section class="es-divider div-02"></section>
+        <section class="es-divider div-02 es_margin"></section>
 
         <section id="es-categories-theme" class="es-grid-container  es_margin">
             <figure class="es-grid-container-card">
@@ -236,7 +236,7 @@
             </figure>
         </section>
 
-        <section class="es-divider div-03"></section>
+        <section class="es-divider div-03 es_margin"></section>
 
         <section id="es-categories-other" class="es-grid-container  es_margin">
 
